# Pocker-ProjectTP-

./: CMakeLists.txt  README.md  main.cpp
description/: description.txt  description_of_project.txt
include/: Card.h  Deck.h  Hand.h  PokerGame.h  card.h  combination.h  denomination.h  player.h  stage.h  state.h  strategy.h
include/enums/: suit.h
sources/: CMakeLists.txt  Card.cpp  Deck.cpp  Hand.cpp  Poker.cpp  PokerGame.cpp  card.cpp  player.cpp  strategy.cpp
